# AETHER

./: .env  .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
back-end/: README.md  SETUP.md
back-end/app/: __init__.py
backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend(enumeration)/app/: __init__.py
backend(intelligence)/: .env  .env.example  README.md  requirements.txt  run.py
backend(intelligence)/app/: __init__.py  main.py
backend(intelligence)/vector_store/: document_metadata.json  index.faiss  index.pkl
backend(mobile)/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.py  test_api_key.py
backend(mobile)/app/: __init__.py  config.py  main.py  models.py
backend(mobile)/uploads/: .gitkeep
backend(recon)/: .env.example
backend(recon)/app/: main.py
backend/app/: config.py  main.py
backend/app/models/: __init__.py  scan.py
backend/app/plugins/: __init__.py  path_traversal.py  security_misconfig.py  sqli.py  xss.py
backend/app/routers/: __init__.py  health.py  websocket.py
backend/app/services/: crawler.py  http_client.py  scanner.py
src/: App.tsx  index.css
src/components/: SitemapGraph.tsx
src/contexts/: ScanContext.tsx
src/hooks/: useReconScan.ts
src/lib/: supabase.ts
src/pages/: Chat.tsx  Dashboard.tsx  Enumeration.tsx  Malware.tsx  Mobile.tsx  Recon.tsx  Settings.tsx  (+1 more)
supabase/: intelligence_schema.sql  migration_add_graph_sitemap.sql  migration_add_mobile.sql  migration_add_recon.sql  schema.sql
(+74 files in other folders)
